[package]
name = "waterleakage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
log = "0.4"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bytes = { version = "1", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
toml = "0.5"
